--- a/GameHog/Views/Game/Index.cshtml
+++ b/GameHog/Views/Game/Index.cshtml
@@ -13,16 +13,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Developers.DeveloperName)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Genres.GenreName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Hardwares.HardwareName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Publishers.PublisherName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Stores.StoreName)
@@ -48,22 +42,22 @@
         <th>
             @Html.DisplayNameFor(model => model.GameESRBRating)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DeveloperName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PublisherName)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Developers.DeveloperName)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Genres.GenreName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Hardwares.HardwareName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publishers.PublisherName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Stores.StoreName)
@@ -88,6 +82,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.GameESRBRating)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DeveloperName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PublisherName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.GameId }) |
