--- a/GameHog/Views/Hardware/Create.cshtml
+++ b/GameHog/Views/Hardware/Create.cshtml
@@ -24,13 +24,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.HardwareId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HardwareId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HardwareId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.HardwareName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -73,14 +73,6 @@
                     @Html.EditorFor(model => model.HardwareShippingUSAOnly)
                     @Html.ValidationMessageFor(model => model.HardwareShippingUSAOnly, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.HardwareUPCCode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.HardwareUPCCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HardwareUPCCode, "", new { @class = "text-danger" })
             </div>
         </div>
 
