Redid naming conventions for most of the models and controllers. Added Ajax to both HardwareController nad StoreController.

--- a/GameHog/Views/Store/Edit.cshtml
+++ b/GameHog/Views/Store/Edit.cshtml
@@ -16,7 +16,7 @@
         <h4>Store</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.StoreId)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.StoreName, htmlAttributes: new { @class = "control-label col-md-2" })
