--- a/GameHog/Views/Store/Create.cshtml
+++ b/GameHog/Views/Store/Create.cshtml
@@ -7,8 +7,12 @@
 
 <h2>Create</h2>
 
+<div class="alert alert-success" role="alert" style="display:none;" id="StatusMessage"></div>
 
-@using (Html.BeginForm()) 
+
+@*@using (Html.BeginForm())*@
+@using (Ajax.BeginForm("CreateAjax", "Stores", new AjaxOptions { HttpMethod = "POST", OnSuccess = "onAjaxRequestSuccess" },
+                                                                    new { @id = "AjaxformId", @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     
@@ -96,4 +100,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/custom-form.js")
 }
